# youdoufu

./: .gitignore  1.html  Dockerfile  README.md
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/: README.md  gradle.properties  local.properties  settings.gradle
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/: build.gradle
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/androidTest/java/com/demo/lib3d/: ExampleInstrumentedTest.java
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/: AndroidManifest.xml
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/config/: config-vv.yaml
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/image/alarmDistance/: 0.png.pvr  1.png.pvr  2.png.pvr  3.png.pvr  4.png.pvr  5.png.pvr  6.png.pvr  7.png.pvr  8.png.pvr  9.png.pvr  cm.png.pvr
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/image/arrow/: 1_00095.png.pvr  1_00109.png.pvr  1_00123.png.pvr  1_00137.png.pvr  1_00151.png.pvr  1_00165.png.pvr
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/image/parking2/: 0.png.pvr  1.png.pvr  3.png.pvr  4.png.pvr  5.png.pvr  6.png.pvr  7.png.pvr
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/image/parkingDistance/: 0.png.pvr  1.png.pvr  10.png.pvr  11.png.pvr  12.png.pvr  13.png.pvr  14.png.pvr  15.png.pvr  16.png.pvr  17.png.pvr  18.png.pvr  19.png.pvr  2.png.pvr  3.png.pvr  4.png.pvr  5.png.pvr  6.png.pvr  7.png.pvr  8.png.pvr  9.png.pvr  decimal0.png.pvr  decimal1.png.pvr  decimal2.png.pvr  decimal3.png.pvr  decimal4.png.pvr  decimal5.png.pvr  decimal6.png.pvr  decimal7.png.pvr  decimal8.png.pvr  decimal9.png.pvr  left.png.pvr
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/image/parking_bar/: D_ic_loading_0.png.pvr  D_ic_loading_1.png.pvr  D_ic_loading_10.png.pvr  D_ic_loading_11.png.pvr  D_ic_loading_2.png.pvr  D_ic_loading_3.png.pvr  D_ic_loading_4.png.pvr  D_ic_loading_5.png.pvr  D_ic_loading_6.png.pvr  D_ic_loading_7.png.pvr  D_ic_loading_8.png.pvr  D_ic_loading_9.png.pvr  R_ic_loading_0.png.pvr  R_ic_loading_1.png.pvr  R_ic_loading_10.png.pvr  R_ic_loading_11.png.pvr  R_ic_loading_2.png.pvr  R_ic_loading_3.png.pvr  R_ic_loading_4.png.pvr  R_ic_loading_5.png.pvr  R_ic_loading_6.png.pvr  R_ic_loading_7.png.pvr  R_ic_loading_8.png.pvr  R_ic_loading_9.png.pvr
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/image/parkout/: 1.png.pvr  2.png.pvr
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/image/wave/: 1_00000.png.pvr  1_00001.png.pvr  1_00002.png.pvr  1_00003.png.pvr  1_00004.png.pvr  1_00005.png.pvr  1_00006.png.pvr  1_00007.png.pvr  (+36 more)
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/assets/avm_resource/image/carmodel3d/junlian/FX11_A2/animation3d/shader/: background.fs  background.vs  brdf.fs  brdf.vs  cubemap.vs  equirectangular_to_cubemap.fs  irradiance_convolution.fs  pbr.fs  pbr.vs  prefilter.fs  simple.fs  simple.vs
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/cpp/3dlib/include/: CarModelAnimation3D.hpp
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/cpp/demo/: Car3DModelDisplay.cpp  Car3DModelDisplay.hpp  CarExitDirection.cpp  CarExitDirection.hpp  GearDisplay.cpp  GearDisplay.hpp  ObstacleDisplay.cpp  ObstacleDisplay.hpp  ParkingDisplay.cpp  ParkingDisplay.hpp  ParkingProgress.cpp  ParkingProgress.hpp  ParkingProgressBar.cpp  ParkingProgressBar.hpp  RadarAlarmDisplay.cpp  RadarAlarmDisplay.hpp  RadarAlarmDistance.cpp  RadarAlarmDistance.hpp  RadarWaterRipple.cpp  RadarWaterRipple.hpp  RenderContext3D.cpp  RenderContext3D.h  UIDisplay.cpp  UIDisplay.hpp  VehicleMoveDirectionArrow.cpp  VehicleMoveDirectionArrow.hpp  VirtualView.cpp  VirtualView.hpp  VisualAngleControl.cpp  VisualAngleControl.hpp  main-vvfbo-msaa-pc.cpp
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/cpp/include/: VirtualView3D.hpp
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/cpp/model/: Include.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  YamlLoader.cpp  YamlLoader.hpp
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/cpp/tool/: GLHelper.hpp  GlprocLoader.cpp  GlprocLoader.hpp  ImageHelper.hpp  Logger.hpp  TimeHelper.hpp
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/java/com/demo/lib3d/: AssetsUtils.java  GLRender3D.java  GLSurfaceView3D.java  HomeWatcher.java  Jni3dlibNativeLoader.java  MainActivity.java  OnHomePressedListenser.java
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/res/layout/: activity_main.xml
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/res/values/: strings.xml  themes.xml
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/main/res/values-night/: themes.xml
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-android/app/src/test/java/com/demo/lib3d/: ExampleUnitTest.java
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-pc/: CMakeLists.txt  build.sh
OpenGL/3dlib-android-pc-FX11_A2-release/3dlib-pc/source/: EGLScreen.hpp  main_3dfbo_msaa_pc_egles.cpp
front/: ai.html  blog-lkp-ai.html  blog-lkp-code.html  blog-lkp-photo.html  blog-lkp.html  index.html  index.js  txt2img.html  unity-blog-ctl.html
fruitninja/: requirements.txt
server/: .env  ecosystem.config.js  index.js  package-lock.json  package.json
(+125 files in other folders)
